$Id: NEWS,v 1.14 2005-05-04 03:03:24 wilsonp Exp $

Version 2.7.6
	
BUGS FIXED
	* added include to dant2alara.C to provide std::min()
	  [PW] (05/03/2005)

NEW FEATURES

CODE UPDATES
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.5
	
BUGS FIXED

NEW FEATURES

CODE UPDATES
	* rewrote dant2alara in C++ eliminating any FORTRAN code from
	  entire code tree [PW] (02/24/2005)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.4
	
BUGS FIXED

NEW FEATURES
	* added updated clearance data for IAEA, NRC and EU [PW] (02/02/05)

CODE UPDATES
	* further improved running of sample/test input problems [PW]
	  (01/15/2005)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.3
	
BUGS FIXED

NEW FEATURES

CODE UPDATES
	* improved running of sample/test input problems [PW] (09/21/2004)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.2
	
BUGS FIXED
	* Fixed library checking for g77/Fortran math (02/18/2004)
	* Fixed bug on forming output type strings (05/12/2004)

NEW FEATURES
	* Improved response reminders at each isotope table and added response reminders
	  to total summary table. (06/03/2004)
	* Added new clearance files: NRC and EU based clearance limits. (06/03/2004)

CODE UPDATES
	* Sample problems and sample data added [DP/PW] (07/23/2004)
	* Developed C/C++ equivalent for reading FORTRAN "unformatted
	  files" and converted RTFLUX handling to be C/C++ based. [PW] (8/04/2004)
	* Fixed bug in creating src/Util/dflt_datadir.h [PW] (8/10/2004)
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.1
	
BUGS FIXED
        * Fixed ADJOINT libraries to work with v.2 binary libraries [PW] (10/20/2003)
        * Removed debugging output at response reminders [PW] (01/28/2004)

NEW FEATURES
	* Machine-dependent data files (binary ALARA libraries) are searched for in a path
	  defined by ALARA_XSDIR environment variable and