@@ -1,4 +1,4 @@
-/* $Id: Mixture.C,v 1.32 2004-06-03 21:56:24 wilsonp Exp $ */
+/* $Id: Mixture.C,v 1.33 2005-05-25 02:30:42 wilsonp Exp $ */
 /* (potential) File sections:
  * Service: constructors, destructors
  * Input: functions directly related to input of data 
@@ -108,9 +108,6 @@ Mixture::~Mixture()
   delete volList;
   delete [] outputList;
   delete next;
-  delete Gvalues;
-  delete GvaluesStorage;
-  delete problemRangesStorage;
 }
 
 /** This assignment operator behaves similarly to the copy
@@ -795,171 +792,3 @@ void Mixture::resetOutList()
     }
 }
 
-/** This function will store the ranges in the probleRanges member
-    variable */
-void Mixture::calcMixRange()
-{
-  // Get data from VolFlux class
-  int nCP   = VolFlux::getNumCP();
-  int nCPEG = VolFlux::getNumCPEG();
-
-  // Get data from Volume class
-  TempLibType rangeLib = Volume::getRangeLib();
-
-  // Alpha
-  // Deuteron
-  // Helium 3
-  // Proton
-  // Triton
-
-
-  // Create Storage
-  problemRanges = new double*[nCP];
-  problemRangesStorage = new double[nCPEG*nCP];
-
-  for(int i = 0; i < nCP; i++)
-    {
-      problemRanges[i] = &problemRangesStorage[i*nCPEG];
-    }
-  
-  // Calculate mixture ranges
-  double InverseRange = 0, probDensity=0, libDensity=0, molarMass=0;
-  bool   notdone = false;
-  char   String[100];
-  int    libKza=0,probKza=0;
-  Root *ptr = rootList;
-  ifstream eleLib("in/elelib");
-
-  for(int i = 0; i < nCP; i++)
-    {
-      for(int k = 0; k < nCPEG; k++)
-	{
-	  ptr = rootList;
-	  while(ptr->getNext())
-	    {
-	      eleLib.seekg(0L,ios::beg);
-	      ptr = ptr->getNext();
-	      probKza = ptr->getKza()/10000;
-
-	      while(probKza == ptr->getKza()/10000)
-		{
-		  probDensity += ptr->mixConc(this);
-		  molarMass += ((ptr->getKza()/10)%1000)*ptr->mixConc(this);
-		  if(!ptr->getNext())
-		    break;
-		  ptr = ptr->getNext();
-		}
-
-	      notdone = true;
-
-	      // Only go into this loop if densities of same elements have been
-	      // summed up
-	      while(notdone)
-		{
-		  String[0] = eleLib.get();
-		  
-		  if(String[0] != ' ' && String[0] != '#')
-		    {
-		      eleLib.get(String,20,'\n');
-		      eleLib >> libKza;
-		    }
-		  
-		  eleLib.getline(String,100,'\n');
-		  
-		  if(libKza == probKza)
-		    {
-		      // Found correct atomic number, now get density
-		      //   from the library.
-		      eleLib.seekg(-45,ios::cur);
-		      eleLib >> libDensity;
-
-		      InverseRange += 1/(rangeLib[probKza][i*nCPEG+k]*
-			(libDensity*AVAGADRO/molarMass));
-		      
-		      probDensity = ptr->mixConc(this);
-		      notdone = false;
-		      molarMass = 0;
-		    }
-	      
-		}
-	  
-	    }
-	  problemRanges[i][k] = 1/InverseRange;
-	  InverseRange = 0;
-	}
-    }
-
-  return;
-}
-
-/** Store values in Gvalues member variable */
-void Mixture::calcGvalues()
-{
-  // Calculate mixture range
-  calcMixRange();
-
-  // Get data from VolFlux class
-  int nNEG  = VolFlux::getNumGroups();
-  int nCP   = VolFlux::getNumCP();
-  int nCPEG = VolFlux::getNumCPEG();
-
-  // Get data from Volume class
-  TempLibType specLib = Volume::getSpecLib();
-  int *energyRel      = Volume::getEnergyRel();  
-
-  // Allocate memory
-  Gvalues = new double**[nCP];
-  GvaluesStorage = new double[nCPEG*nNEG*nCP];
-
-  for(int i = 0; i < nCP; i++)
-    {
-      Gvalues[i] = new double*[nCPEG];
-      for(int j = 0; j < nCPEG; j++)
-	{
-  	  Gvalues[i][j] = &GvaluesStorage[i*(nCPEG*nNEG)+j*nNEG];
-	}
-    }
-
-  // Get NX cross sections
-  Node dataAccess;
-  std::map<int, double**, std::less<int> > CPXS;
-  Root *rootPtr = rootList;
-
-  while(rootPtr->getNext())
-    {
-      rootPtr = rootPtr->getNext();
-      CPXS[rootPtr->getKza()] = dataAccess.getCPXS(rootPtr->getKza());
-    }
-
-  // Calculate G-values
-  double sumk = 0, sumNEG=0, sumA=0;
-  int curKza;
-
-  for(int CP = 0; CP < nCP; CP++)
-    {
-      for(int CPEG = 0; CPEG < nCPEG; CPEG++)
-	{
-	  for(int NEG = 0; NEG < nNEG; NEG++)
-	    {
-	      sumA = 0;
-	      rootPtr = rootList;
-	      while(rootPtr->getNext())
-	      {
-		rootPtr = rootPtr->getNext();
-		curKza = rootPtr->getKza();
-		sumk = 0;
-		for(int k = CPEG; k < nCPEG; k++)
-		  {
-		    sumk += specLib[curKza][energyRel[NEG]*(nCP*nCPEG)+CP*nCPEG+CPEG]*
-		      problemRanges[CP][CPEG];
-		  }
-		sumA += sumk*rootPtr->mixConc(this)*CPXS[curKza][CP][NEG];
-		
-	      }
-	      
-	      Gvalues[CP][CPEG][NEG] = sumA;
-	    }
-	} 
-    }
-  
-}
