@@ -1,8 +1,11 @@
-$Id: NEWS,v 1.14 2005-05-04 03:03:24 wilsonp Exp $
+$Id: NEWS,v 1.15 2005-05-25 02:35:16 wilsonp Exp $
 
 Version 2.7.6
 	
 BUGS FIXED
+	* removed some old "sequential charged particle reaction" code
+	  that was never used and caused occasional core dumps 
+	  [PW] (05/24/2005)
 	* added include to dant2alara.C to provide std::min()
 	  [PW] (05/03/2005)
 
